--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "(tee) Launch",
+            "name": "(cat) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/tee",
+            "program": "${workspaceFolder}/cat",
             "args": ["/rohit/wrFile.txt"],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
